<resources>
    <string name="app_name">operaciones</string>
    <string name="titulo">Operaciones</string>
    <string name="numero1">Numero 1</string>
    <string name="numero2">Numero 2</string>
    <string name="sumar">Sumar</string>
    <string name="limpiar">Limpiar</string>
    <string name="error_numero1">Digite el numero 1</string>
    <string name="error_numero2">Digite el numero 2</string>
    <string name="error_numero3">No puede divir entre 0</string>
    <string name="operacion">Operación</string>
    <string name="restar">Restar</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
    <string-array name="operaciones">
        <item>@string/sumar</item>
        <item>@string/restar</item>
        <item>@string/multiplicar</item>
        <item>@string/dividir</item>
    </string-array>

</resources>
